--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World!
+I am a visiting student researcher at Stanford Vision and Learning Lab focused at the intersection of machine learning and robotics. In my past life, I was a software engineer in the industry and graduated with a BSc in Computer Science from UC San Diego.                                                                         
+
+[LinkedIn](http://linkedin.com/in/shivanimall)
+[Github](http://github.com/shivanimall)
