--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World!
+<a href="http://linkedin.com/in/shivanimall" URL> Linkedin </a>
+<a href="http://github.com/shivanimall" URL> Github</a>
+
+I am a visiting student researcher at Stanford Vision and Learning Lab focused at the intersection of machine learning and robotics. In my past life, I was a software engineer in the industry and graduated with a BSc in Computer Science from UC San Diego.
+
+~                                                                                                                                                                                                         
+~                                                                                                                                                                                                       
