--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<a href="http://linkedin.com/in/shivanimall" URL> Linkedin </a>
+<a href="http://linkedin.com/in/shivanimall" URL> Linkedin <br> </a>
 <a href="http://github.com/shivanimall" URL> Github</a>
 
-I am a visiting student researcher at Stanford Vision and Learning Lab focused at the intersection of machine learning and robotics. In my past life, I was a software engineer in the industry and graduated with a BSc in Computer Science from UC San Diego.
-
-~                                                                                                                                                                                                         
-~                                                                                                                                                                                                       
+I am a visiting student researcher at Stanford Vision and Learning Lab focused at the intersection of machine learning and robotics. 
+In my past life, I graduated with a BSc in Computer Science from UC San Diego and was an engineer in the industry.
