--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <a href="http://linkedin.com/in/shivanimall" URL> Linkedin <br> </a>
-<a href="http://github.com/shivanimall" URL> Github</a>
+<a href="http://github.com/shivanimall" URL> Github <br> </a>
 
 I am a visiting student researcher at Stanford Vision and Learning Lab focused at the intersection of machine learning and robotics. 
-In my past life, I graduated with a BSc in Computer Science from UC San Diego and was an engineer in the industry.                                                                       
+In my past life, I graduated with a BSc in Computer Science from University of California, San Diego and worked as an engineer in the industry.                                                                       
 
